--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   release:
-    type: [ created ]
+    type: [ published ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
