--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "vite": "^2.9.15"
-  }
+  },
+  "homepage": "https://pozob.github.io/Payday-2-Secret-Translator"
 }
