--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "pd2translator-v2",
+  "name": "oauth",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "bootstrap": "^5.2.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.15"
-  },
-  "homepage": "https://pozob.github.io/Payday-2-Secret-Translator"
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "svelte": "^4.2.3",
+    "vite": "^5.0.0"
+  }
 }
