--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,52 +2,52 @@ name: Build
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [master]
-  workflow_dispatch:
+    # Triggers the workflow on push or pull request events but only for the "master" branch
+    push:
+        branches: [master]
+    workflow_dispatch:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    group: 'pages'
+    cancel-in-progress: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4.0.0
-        with:
-          node-version: 16.x
-      - name: Install Dependencies & Build
-        run: |
-          npm ci
-          npm run build
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2.0.0
-        with:
-          # Upload dist repository
-          path: 'dist/'
-          
-  deploy:
-    needs: [build]
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v4.0.0
+              with:
+                  node-version: 20.x
+            - name: Install Dependencies & Build
+              run: |
+                  npm ci
+                  npm run build
+            - name: Upload Pages artifact
+              uses: actions/upload-pages-artifact@v2.0.0
+              with:
+                  # Upload dist repository
+                  path: 'dist/'
 
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v3.0.6
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1.2.9
+    deploy:
+        needs: [build]
+        permissions:
+            pages: write # to deploy to Pages
+            id-token: write # to verify the deployment originates from an appropriate source
+        # Deploy to the github-pages environment
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+
+        # The type of runner that the job will run on
+        runs-on: ubuntu-latest
+
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            - name: Setup Pages
+              uses: actions/configure-pages@v3.0.6
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v1.2.9
