--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
                   node-version: 20.x
             - name: Install Dependencies & Build
               run: |
+                  env
                   npm ci
                   npm run build
             - name: Upload Pages artifact
