--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ concurrency:
 
 env:
     # Use the Envoronment Variable to set the Base Directory
-    VITE_BASEDIR: ${{ vars.VITE_BASEDIR }}
+    VITE_BASEDIR: /${{ github.event.repository.name }}/
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
